<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/title" />

<ScrollView 
	android:layout_height="wrap_content" 
	android:layout_width="fill_parent">
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/subTitle244" />
		<LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
			<Button 
				android:text="btn01" 
				android:id="@+id/btnToastShort" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:onClick="onClickButton" />
			<Button 
				android:text="btn02" 
				android:id="@+id/btnToastLong" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:onClick="onClickButton" />
		</LinearLayout>
		
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/subTitle253" />
			<TextView
				android:text="@string/mes03"
				style="@style/defaultTheme"
				android:layout_height="wrap_content" 
				android:layout_width="wrap_content" />
		</LinearLayout>
		
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/subTitle262" />
			<Button 
				android:text="@string/btn03" 
				android:id="@+id/btnListView" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:onClick="onClickButton" />
		</LinearLayout>
		
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/subTitle266" />
		<RelativeLayout
			android:layout_height="fill_parent" 
			android:layout_width="fill_parent">
			<TextView 
			    android:text="@string/mes04" 
			    android:id="@+id/TextView01" 
				android:layout_toRightOf="@+id/TextView02" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" />
			<TextView 
			    android:text="@string/mes05" 
			    android:id="@+id/TextView02" 
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" />
		</RelativeLayout>

	</LinearLayout>
</ScrollView>

</LinearLayout>